# rustyrag

./: .gitignore  .gitmodules  Cargo.toml  README.md
qdrant_storage/: raft_state.json
qdrant_storage/collections/qdrant-web-site-docs-2024-04-05.snapshot/: config.json  payload_index.json
qdrant_storage/collections/qdrant-web-site-docs-2024-04-05.snapshot/0/: replica_state.json
qdrant_storage/collections/qdrant-web-site-docs-2024-04-05.snapshot/0/segments/1078a4b4-48cb-49f5-8dbd-0e6896ab9fbf/: 000018.sst  IDENTITY  LOG  MANIFEST-000035  OPTIONS-000033  mutable_id_tracker.mappings  mutable_id_tracker.versions  segment.json
qdrant_storage/collections/qdrant-web-site-docs-2024-04-05.snapshot/0/segments/1078a4b4-48cb-49f5-8dbd-0e6896ab9fbf/payload_index/: 000014.sst  000015.sst  000016.sst  IDENTITY  LOG  MANIFEST-000028  OPTIONS-000030  config.json
qdrant_storage/collections/qdrant-web-site-docs-2024-04-05.snapshot/0/segments/79975eef-d35a-4499-8873-6ff709c72436/: IDENTITY  LOG  MANIFEST-000021  segment.json
qdrant_storage/collections/qdrant-web-site-docs-2024-04-05.snapshot/0/segments/79975eef-d35a-4499-8873-6ff709c72436/payload_index/: IDENTITY  LOG  MANIFEST-000019  config.json
qdrant_storage/collections/qdrant-web-site-docs-2024-04-05.snapshot/0/wal/: first-index
src/: chunking.rs  document.rs  embedding.rs  lib.rs  llm.rs  main.rs  qdrant.rs  query.rs
