[package]
name = "rustyrag"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dependencies]
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = "0.4.3"
anyhow = "1.0"
clap = { version = "4.5.51", features = ["derive"] }
lopdf = "0.38.0"
qdrant-client = "1.15.0"
reqwest = "0.12.24"
serde = "1.0.228"
text-splitter = { version = "0.28.0", features = ["tokenizers"] }
tokenizers = { version = "0.22.1", features = ["http"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
safetensors = "0.4"
tonic = "0.14.2"
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4"] }
